<?xml version="1.0"?>
<package>
  <name>sr_3dmouse</name>
  <version>0.0.0</version>
  <description>The sr_3dmouse package</description>

  <maintainer email="user@todo.todo">user</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>spacenavd_node</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>

  </export>
</package>
