<?xml version="1.0"?>
<package>
  <name>sr_3dmouse</name>
  <version>0.0.0</version>
  <description>The sr_3dmouse package</description>

  <maintainer email="fotios@shadowrobot.com">user</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>spacenav_node</run_depend>

  <test_depend>sr_robot_launch</test_depend>

  <export>
  </export>
</package>
