<?xml version="1.0"?>
<package>
  <name>sr_grasp_stability</name>
  <version>0.0.0</version>
  <description>A grasp stability package</description>
  <maintainer email="software@shadowrobot.com">user</maintainer>

  <license>GPL</license>
  <url type="website">http://www.shadowrobot.com</url>
  <url type="repository">https://github.com/shadow-robot/sr_tools</url>
  <url type="bugtracker">https://github.com/shadow-robot/sr_tools/issues</url>

  <author>Anastasios Zompas</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>

  <export>

  </export>
</package>
