<?xml version="1.0"?>
<package format="2">
  <name>sr_hand_health_report</name>
  <version>0.0.1</version>
  <description>The sr_hand_health_report package</description>
  <author email="giuseppe@shadowrobot.com">Giuseppe Barbieri</author>
  <maintainer email="software@shadowrobot.com">Shadow Robot Software Team</maintainer>
  <license>Private</license>
  <url type="repository">https://github.com/sr_tools/</url>
  <url type="bugtracker">https://github.com/sr_tools/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <depend>std_msgs</depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sr_utilities_common</exec_depend>
  <exec_depend>sr_system_info</exec_depend>
  <exec_depend>sr_controllers_tools</exec_depend>
  <exec_depend>sr_logging_common</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>sr_description</exec_depend>
  <exec_depend>sr_edc_launch</exec_depend>
  <exec_depend>sr_ethercat_hand_config</exec_depend>

</package>
