<?xml version="1.0"?>
<!--
 Copyright 2022 Shadow Robot Company Ltd.
 This program is free software: you can redistribute it and/or modify it
 under the terms of the GNU General Public License as published by the Free
 Software Foundation version 2 of the License.
 This program is distributed in the hope that it will be useful, but WITHOUT
 ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
 FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for
 more details.
 You should have received a copy of the GNU General Public License along
 with this program. If not, see <http://www.gnu.org/licenses/>.
-->

<package format="2">
  <name>sr_hand_health_report</name>
  <version>0.0.1</version>
  <description>The sr_hand_health_report package</description>
  <author email="giuseppe@shadowrobot.com">Giuseppe Barbieri</author>
  <maintainer email="software@shadowrobot.com">Shadow Robot Software Team</maintainer>
  <license>Private</license>
  <url type="repository">https://github.com/sr_tools/</url>
  <url type="bugtracker">https://github.com/sr_tools/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <depend>std_msgs</depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sr_utilities_common</exec_depend>
  <exec_depend>sr_system_info</exec_depend>
  <exec_depend>sr_controllers_tools</exec_depend>
  <exec_depend>sr_logging_common</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>sr_description</exec_depend>
  <exec_depend>sr_edc_launch</exec_depend>
  <exec_depend>sr_hand_config</exec_depend>

</package>
